[tool.poetry]
name = "ttwd"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
beautifulsoup4 = "^4.13.3"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
